--- a/task3.html
+++ b/task3.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Бодибилдинг — Сила, Форма, Результат</title>
-  <link rel="stylesheet" href="task3.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="task3-page">
 
   <header>
     <h1>Бодибилдинг</h1>
